--- a/declarative.html
+++ b/declarative.html
@@ -99,7 +99,7 @@
 
 		<p>
 			Early in my research career, I set out to document some of the major categories of gulfs of execution and evaluationin declaractive interfaces.
-			I found six (<a href="ko04">Ko et al. 2004</a>):
+			I found six (<a href="#ko04">Ko et al. 2004</a>):
 		</p>
 		
 		<ul>
