Consistent chapter titles.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 				<td>Chapter 3. <a href="mediation.html">What interfaces mediate</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 4. <a href="declarative.html">Declarative mediation</a></td>
+				<td>Chapter 4. <a href="declarative.html">Declarative interfaces</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 5. <a href="interactive.html">Interactive mediation</a></td>
+				<td>Chapter 5. <a href="interactive.html">Interactive interfaces</a></td>
 			</tr>
 			<tr>
 				<td>Chapter 6. <a href="architecture.html">Architecture</a></td>
