--- a/translation.html
+++ b/translation.html
@@ -61,11 +61,67 @@
 				Even if the interface is fully proven (which it never is), scale is its own risk.
 			</li>
 			<li>
-				<strong>The interface has to win in the market</strong>.
+				<strong>The interface must to win in the market</strong>.
 				Even if an organization perfectly executes an interface at scale, and is fully committed to seeing it in the world, it only lives on if the timing is right for people to want it relative to other interfaces.
 				Consider Google's many poorly timed innnovations: Google Glass, Google Wave, Google Buzz, Google Video; all of these were compelling new interface innovations, but none of them found a market.       
 		</ul>
 
+		<p>
+			Let's consider four examples of interface technologies where these three things either did or didn't happen, and that determined whether the idea made it to market.
+		</p>
+
+		<p>
+			Strong AI: no feasibility
+		</p>
+		
+		<p>
+			Brain-computer interfaces: feasibility, no one willing to take the risk yet.
+		</p>
+
+		<p>
+			Google Glass: research feasibility, Google took the risk, no market.
+		</p>
+			
+		<p>
+			Voice assistants: research feasibility, Apple took the risk, found a market.
+		</p>
+		
+		<p>
+			What are the implications of these stories for someone in innovating in industry?
+			The criteria is pretty clear, even if the strategies for success aren't.
+			First, if an interface idea hasn't been rigorously tested in research, building a product (or even a company) out of the idea is very risky.
+			That puts a product team or company in the position of essentially <em>doing</em> research, and as we know, research doesn't always work out.
+			Some companies (e.g., Waymo), decide to take on these high risks, but they often do so with the high expectation of failure.
+			Few companies can do that.
+		</p>
+
+		<p>
+			Even when an idea is great and we know it works, there's a really critical phase in which someone has to learn about the idea, see an opportunity, and take a leap to invest in it.
+			Who's job is it to ensure that entrepreners and companies learn about research ideas?
+			Should researchers be obligated to market their ideas to companies?
+			If so, how should researchers get their attention?
+			Should product designers be obligated to visit academic conferences, read academic journals, or read books like this?
+			Why should they, when the return on investment is so low?
+			In other disciplines such as medicine, there are people who practice what's called <em>translational medicine</em>, in which researchers take basic medical discoveries and try to find product opportunities for them.
+			These roles are often funded by governemnts, which view their role as investing in things markets cannot risk doing.
+			Perhaps computing should have the same roles and government investment.
+		</p>
+		
+		<p>
+			Finally, and perhaps most importantly, even when there <em>are</em> real opportunities for improving products through new interface ideas, the timing in the world has to be right.
+			People may view the benefit of learning a new interface as too low relative to the cost of learning.
+			There may be other products that have better marketing, or that have found ways of locking customers in.
+			These market factors have nothing to do with the merits of an idea, but the particular structure of a marketplace at a particular time.
+		</p>
+		
+		<p>
+			The result of these three factors is that the gap between research and practice is quite wide.
+			We shouldn't be surprised that innovations from academia can take decades to make it to market, if ever.
+			If you're reading this book, consider your role in mining research for innovations and bringing them to products.
+			Are you in a position to take a risk on bringing a research innovation to the world?
+			If not, who is?
+		</p>
+		
 		<center><p class="lead"><a href="index.html">Back to table of contents</a></p></center>
 
 		<h2>Further reading</h2>
