Fixed a few typos.

--- a/theory.html
+++ b/theory.html
@@ -104,7 +104,7 @@
 			An <strong>affordance</strong> is a property of what can be done to an interface in order to produce some effect.
 			For example, a physical computer mouse can be clicked, which allows information to be communicated to a computer.
 			A digital personal assistant like Amazon's Alexa can be invoked by saying "Alexa".
-			These are affordances for what an object is capable of.
+			These are affordances that define how an object can be interacted with.
 		</p>
 		
 		<p>
@@ -124,7 +124,7 @@
 			While both of these examples involve hardware, the same concepts of affordance and signifier apply to software too.
 			Buttons in a graphical user interface have an affordance: if you click within their rectangular boundary, the computer will execute a command.
 			If you have sight, you know a button is clickable because long ago you learned that buttons have particular visual properties such as a rectangular shape and a label.
-			If you are blind, you might known a button is clickable because your screen reader announces that something is a "button" and reads its label.
+			If you are blind, you might know a button is clickable because your screen reader announces that something is a "button" and reads its label.
 			All of this requires you knowing that interfaces have affordances such as buttons that are signified by a particular visual motif.
 			Therefore, a central challenge of designing a user interface is deciding what affordances an interface will have and how to signify that they exist.
 		</p>
