Added missing "be"

--- a/architecture.html
+++ b/architecture.html
@@ -224,7 +224,7 @@
 			<li>Model-view-controller is a ubiquitous architectural style in user interface implementation.</li>
 			<li>User interface toolkits are essential to making it easy to implement interfaces.</li>
 			<li>New input techniques require new user interface architectures, and therefore new user interface toolkits.</li>
-			<li>Interfaces can automatically generated, manipulated, inspected, and transformed, but only within the limits of the architecture in which they are implemented.</li>
+			<li>Interfaces can be automatically generated, manipulated, inspected, and transformed, but only within the limits of the architecture in which they are implemented.</li>
 			<li>The architecture an interface is built in determines what is difficult to test and debug.</li>
 		</ul>
 
