--- a/architecture.html
+++ b/architecture.html
@@ -101,7 +101,7 @@
 			This architecture divides a user interface into three parts:
 		</p>
 
-		<img src="images/mvc.png" class="img-responsive" alt="An MVC architecture for a web form, showing a model that stores the username and password being entered, the controller that decides when to activate the login button, and the view, which displays the form data and buttons, and listens for clicks."/>
+		<img src="images/mvc.jpg" class="img-responsive" alt="An MVC architecture for a web form, showing a model that stores the username and password being entered, the controller that decides when to activate the login button, and the view, which displays the form data and buttons, and listens for clicks."/>
 
 		<ul>
 			<li>
