Removed glasses example.

--- a/accessibility.html
+++ b/accessibility.html
@@ -47,12 +47,11 @@
 		<p>
 			However, this bias is also unreasonable because not everyone can see, use their fingers precisely, or read text.
 			Designing interfaces that can <em>only</em> be used if one has these abilities means that vast numbers of people simply can't use interfaces (<a href="https://doi.org/10.1109/JPROC.2011.2182090">Ladner 2012</a>).
-			And this is no small population: according to a <a href="http://www.worldbank.org/en/topic/disability">2004 World Bank survey</a> (World Bank is an international financial institution that seeks to reduce poverty), one billion people (15% of humanity) has some form of disability.
+			And this is no small population: according to a <a href="http://www.worldbank.org/en/topic/disability">2004 World Bank survey</a> (World Bank is an international financial institution that seeks to reduce poverty), one billion people (15% of humanity) has some form of disability that impacts their daily activities.
 			That includes people who are blind, low-vision, color blind, deaf, hard of hearing, unable to speak, or posses speech impediments, inability to walk or use limbs, or have some form of cognitive disorder such as dyslexia, dysgraphia, dyscalculia, memory loss, or learning disabilities.
 			This might describe you.
 			This might describe someone you know.
-			And if it doesn't, take off your glasses, remove your contacts, or wait until you're 70.
-			You will eventually be disabled in one or more of these ways.
+			Chances are, you will be disabled in one or more of these ways someday as you age.
 			And that means you'll struggle or be unable to use the graphical user interfaces you've worked so hard to learn.
 		</p>
 		
