--- a/accessibility.html
+++ b/accessibility.html
@@ -32,7 +32,9 @@
 			Thus far, most of our discussion has focused on what user interfaces <em>are</em>.
 			I <a href="theory.html">described them theoretically</a> as <em>a mapping from the sensory, cognitive, and social human world to these collections of functions exposed by a computer program</em>.
 			While that's true, most of the mappings we've discussed have been input via our fingers and output to our visual perceptual systems. Most user interfaces have largely ignored other sources of human action and perception.
-			We can speak, we can control over 600 different muscles, we can convey hundreds of types of non-verbal information through our gaze, posture, and orientation.
+			We can speak.
+			We can control over 600 different muscles.
+			We can convey hundreds of types of non-verbal information through our gaze, posture, and orientation.
 			We can see, hear, taste, smell, sense pressure, sense temperature, sense balance, sense our position in space, and feel pain, among dozens of other senses.
 			This vast range of human abilities is largely unused in interface design.
 		</p>
