Added screen reader video.

--- a/accessibility.html
+++ b/accessibility.html
@@ -75,6 +75,15 @@
 			<li><strong>Captions</strong> annotate the speech and action in video as text, allowing people who are deaf or hard of hearing to consume the audio content of video.</li>
 			<li><strong>Braille</strong>, as shown in the image at the top of this chapter, is a tactile encoding of words for people who are visually impaired.</li>
 		</ul>
+
+		<p>
+			Consider, for example, this demonstration of screen readers and a braille display:
+		</p>
+		
+		<p class="embed-responsive embed-responsive-16by9">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/7Rs3YpsnfoI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<center>Screen readers and braille output</center>
+		</p>
 		
 		<p>
 			Fundamentally, universal user interface designs are ones that can be operated via <em>any input and output modality</em>. 
