--- a/translation.html
+++ b/translation.html
@@ -45,7 +45,7 @@
 
 		<p>
 			How then, do research ideas <em>indirectly</em> lead to impact?
-			I would argue, based on both experience, and historical records of interface innovation, that there are three essential events that musst occur.
+			I would argue, based on both experience, and historical records of interface innovation, that there are three essential events that must occur.
 		</p>
 
 		<ul>
