Added AI example.

--- a/translation.html
+++ b/translation.html
@@ -63,7 +63,7 @@
 			<li>
 				<strong>The interface must to win in the market</strong>.
 				Even if an organization perfectly executes an interface at scale, and is fully committed to seeing it in the world, it only lives on if the timing is right for people to want it relative to other interfaces.
-				Consider Google's many poorly timed innnovations: Google Glass, Google Wave, Google Buzz, Google Video; all of these were compelling new interface innovations, but none of them found a market.       
+				Consider Google's many poorly timed innnovations at scale: Google Glass, Google Wave, Google Buzz, Google Video; all of these were compelling new interface innovations, but none of them found a market, and so they didn't survive.
 		</ul>
 
 		<p>
@@ -71,7 +71,14 @@
 		</p>
 
 		<p>
-			Strong AI: no feasibility
+			The first example we'll consider is what's typically known as <strong>strong AI</strong>.
+			This is the idea of a machine that exhibits behavior that is at least, if not more skillful than human behavior.
+			This is the kind of AI portrayed in many science fiction movies, usually where the AI either takes over humanity (e.g., <a href="https://en.wikipedia.org/wiki/The_Terminator">The Terminator</a>), or plays a significant role in human society (e.g., <a href="https://en.wikipedia.org/wiki/List_of_The_Jetsons_characters#Rosie">Rosie the robot maid in the Jetsons</a>).
+			These kinds of robots, in a sense, are an interface: we portray interacting with them, giving them commands, and utilizing their output.
+			The problem of course, is that strong AI isn't (yet) feasible.
+			No researchers have demonstrated any form of strong AI.
+			All AI to date has been weak AI, capable of functioning in only narrow ways after significant human effort to gather data to train the AI.
+			Because it's not feasible in the lab, there aren't likely to be any entreprenurs willing to take the risk of bringing something to market.
 		</p>
 		
 		<p>
