--- a/translation.html
+++ b/translation.html
@@ -70,6 +70,8 @@
 			Let's consider four examples of interface technologies where these three things either did or didn't happen, and that determined whether the idea made it to market.
 		</p>
 
+		<img src="images/rosie.jpg" class="img-responsive" alt="Rosie the robot maid, from The Jetsons, cleaning up sandwich debris." />
+
 		<p>
 			The first example we'll consider is what's typically known as <strong>strong AI</strong>.
 			This is the idea of a machine that exhibits behavior that is at least, if not more skillful than human behavior.
