Added variety of organizations.

--- a/translation.html
+++ b/translation.html
@@ -59,6 +59,7 @@
 				It doesn't matter how much evidence researchers gather about the viability of an interface idea.
 				At some point, someone in an organization is going to have to see some opportunity in bringing that interface to the world at scale.
 				Even if the interface is fully proven (which it never is), scale is its own risk.
+				These organizations might be startups, established companies, government entities, non-profits, open source communities, or any other form of community that wants to make something.
 			</li>
 			<li>
 				<strong>The interface must to win in the market</strong>.
