--- a/declarative.html
+++ b/declarative.html
@@ -112,7 +112,7 @@
 			<li>
 				<strong>Selection barriers</strong>.
 				Once someone knows what they want to express, finding the abstractions that are most helpful in expressing it is another challenge.
-				which parts of a programming language and API are most useful in expressing some computation?
+				Which parts of a programming language and API are most useful in expressing some computation?
 				People have to bridge this gulf of execution before writing any code.
 			</li>
 			<li>
