Added draft of market opportunity paragraph.

--- a/translation.html
+++ b/translation.html
@@ -80,15 +80,25 @@
 			These kinds of robots, in a sense, are an interface: we portray interacting with them, giving them commands, and utilizing their output.
 			The problem of course, is that strong AI isn't (yet) feasible.
 			No researchers have demonstrated any form of strong AI.
-			All AI to date has been weak AI, capable of functioning in only narrow ways after significant human effort to gather data to train the AI.
-			Because it's not feasible in the lab, there aren't likely to be any entreprenurs willing to take the risk of bringing something to market.
+			All AI to date has been <strong>weak AI</strong>, capable of functioning in only narrow ways after significant human effort to gather data to train the AI.
+			Because strong AI is not feasible in the lab, there aren't likely to be any entreprenurs willing to take the risk of bringing something to market at scale.
 		</p>
 		
 		<p>
-			Brain-computer interfaces: feasibility, no one willing to take the risk yet.
+			That example was fairly obvious of course; something that doesn't work clearly isn't going to be transferred into practice.
+			But what about something that <em>is</em> feasible based on research?
+			Consider, for example, brain-computer interfaces, which have a reasonable body of evidence behind them.
+			We know that, for example, it's feasible to detect muscular activity with non-invasive sensors and that we can classify a large range of behaviors based on this.
+			The key point that many researchers fail to recognize is that such evidence of feasibility is <em>necessary but insufficient</em> to motivate a business risk.
+			To bring brain-computer interfaces to market, one needs a plan for who will pay for that technology and why.
+			Will it be a popular game or gaming platform that causes people to buy?
+			A context where hands-free, voice-free input is essential and valuable?
+			Or perhaps someone will bet on creating a <em>platform</em> on which millions of application designers might experiment, searching for that killer app?
+			Whatever happens, it will be a market opportunity that pulls research innovations from the archives of digital libraries and researcher's heads into the product plans of an organization.
 		</p>
 
 		<p>
+			Of course, just because someone sees an opportunity doesn't mean that there actually is one, or that it will still exist by the time a product is released.
 			Google Glass: research feasibility, Google took the risk, no market.
 		</p>
 			
