Added link to BCI image.

--- a/translation.html
+++ b/translation.html
@@ -84,6 +84,8 @@
 			Because strong AI is not feasible in the lab, there aren't likely to be any entreprenurs willing to take the risk of bringing something to market at scale.
 		</p>
 		
+		<img src="images/bci.jpg" class="img-responsive" alt="Two people with sensors on their heads attempting to operate a brain computer interface." />
+
 		<p>
 			That example was fairly obvious of course; something that doesn't work clearly isn't going to be transferred into practice.
 			But what about something that <em>is</em> feasible based on research?
