--- a/interactive.html
+++ b/interactive.html
@@ -130,7 +130,7 @@
 		<p>
 			
 		<ul>
-			<li><strong>Sliders></strong> provide a control for specifying continuous numeric values within a numeric range.</li>
+			<li><strong>Sliders</strong> provide a control for specifying continuous numeric values within a numeric range.</li>
 			<li><strong>Checkboxes</strong> provide an error-free mechanism for specifying binary values (and sometimes tertiary values, which are often represented by a dash).</li>
 			<li><strong>Text boxes</strong> provide an interface for specifying string values, often with sophisticated error-prevention mechanisms such as form validation and user efficiency features such as auto-complete</li>
 			<li><strong>Radio buttons</strong> and <strong>drop down menus</strong> provide error-preventing interfaces for specifying categorical values.</li>
