Added Jake to author list.

--- a/text-entry.html
+++ b/text-entry.html
@@ -26,7 +26,7 @@
 		<small>A standard text entry device and it's avid user. Credit: Flickr/dougewoods</small>
 		
 		<h1>Text entry</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Andrew J. Ko (with contributions from Jacob O. Wobbrock)</div>
 
 		<p>
 			Just as pointing is a nearly ubiquitous form of <em>non-verbal</em> communication, text is a ubiquitous form of <em>verbal</em> communication.
